2006-10-30  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: added ability to sync between test cases
	* tests/testsuite-timod.at: added ability to sync between test cases
	* tests/testsuite-tirdwr.at: added ability to sync between test cases
	* tests/testsuite-xnet.at: added ability to sync between test cases
	* tests/testsuite-xnet_thr.at: added ability to sync between test cases

2006-10-21  Brian Bidulock  <bidulock@openss7.org>

	* strxnet.lsm.in: updated streams release number
	* debian/control.in: updated streams release number
	* doc/man/strxnet.refs: updated streams release number
	* doc/manual/releases.texi: updated streams release number
	* debian/control.in: updated LiS release number
	* doc/manual/releases.texi: updated LiS release number

2006-10-19  Brian Bidulock  <bidulock@openss7.org>

	* src/include/sys/xti_sctp.h: added ETSI SACK frequency option

2006-10-10  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/man/strxnet.refs: updates for release
	* doc/man/man3/t_free.3.man: updates for release
	* doc/man/man3/t_sndrel.3.man: updates for release
	* doc/man/man3/xti.3.man: updates for release
	* doc/man/man7/T_DISCON_IND.7.man: updates for release

2006-10-05  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/manual/descrip.texi: updates for release
	* doc/manual/news.texi: updates for release
	* doc/manual/todo.texi: updates for release

2006-10-04  Brian Bidulock  <bidulock@openss7.org>

	- changes to pass distcheck target
	* Makefile.am: leave SOURCES outside conditionals
	* lib32/Makefile.am: leave SOURCES outside conditionals
	* po/POTFILES.in: corrections
	* po/de.po: updates


2006-10-03  Brian Bidulock  <bidulock@openss7.org>

	* configure.ac: added config file